[package]
name = "genetic_image_generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
image = "0.24.6"
imageproc = "0.23.0"
rand = "0.8.0"
rand_isaac = "0.3.0"
rayon = "1.7.0"
